# JMB-Portfolio

./: .gitignore  APITests.ipynb  README.md  RunAPITests.py  RunSeleniumTests.py  RunTests.ipynb  pyproject.toml
.github/workflows/: api_test.yml  main.yml  selenium_test.yml  test_all.yml
APITests/: APITests.ipynb  RunAPITests.py  test_keanu_reeves_whoa.py  test_open_library.py
APITests/helpers/: APIHelper.py
APITests/schemas/: keanu_reeves_whoa_random_response.json
SeleniumTests/: RunSeleniumTests.py  SeleniumTests.ipynb  conftest.py  test_add_remove_elements.py  test_basic_auth.py  test_broken_images.py
