[project]
name = "jmb-portfolio"
version = "0.1.0"
description = "A collection of automated tests created and maintained by the author."
authors = [
    {name = "James Berndt",email = "jamesmberndt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
